--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main class="container">
         <section class="about" id="about">
             <h2>About Me</h2>
-            <p>I have done my B.Tech from Model Institute of Engineering and Technology (MIET), Jammu, under Computer
+            <p>I have done my BE from Model Institute of Engineering and Technology (MIET), Jammu, under Computer
                 Science and Engineering, with a minor in Artificial Intelligence and Machine Learning. I completed my
                 schooling from Kendriya Vidyalaya No.1, Gandhi Nagar, Jammu, having passed both 10th and 12th with a
                 science (non-medical) background.</p>
