--- a/project6.html
+++ b/project6.html
@@ -44,6 +44,18 @@
                 rel="noopener" class="download-btn"
                 style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on GitHub <i
                     class="fab fa-github"></i></a>
+            
+            <a href="https://agewell-5jt8.onrender.com/" target="_blank" rel="noopener"
+                class="download-btn"
+                style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem; margin-left: 12px;">Live View <i
+                    class="fas fa-external-link-alt"></i></a>
+
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Overview</h3>
+            <p style="font-size:1.18rem; line-height:1.7;">AgeWell is a comprehensive web-based platform designed to empower 
+                elderly individuals by providing an intuitive interface for managing their social, financial, and health-related 
+                needs. The platform facilitates secure connections between seniors and their family members, enabling real-time 
+                monitoring and quick response during emergencies.</p>
+            
             <div style="margin-top: 30px;">
                 <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Key Features</h3>
                 <div class="feature-cards">
