--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="photo.jpg" alt="Rakshit Photo" class="profile-pic">
             <div>
                 <h1>Rakshit Gupta</h1>
-                <p>B.Tech, Computer Science & Engineering (AI/ML Minor)<br>
+                <p>B.E., Computer Science & Engineering (AI/ML Minor)<br>
                     Model Institute of Engineering and Technology (MIET), Jammu</p>
             </div>
         </div>
