--- a/projects/project6.html
+++ b/projects/project6.html
@@ -49,7 +49,8 @@
     </nav>
     <main class="container">
         <section class="project-detail">
-            <h2 style="font-size:2.5rem; margin-bottom:18px;">AgeWell - A Smart Portal for Senior Citizen Support</h2>
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">👴 AgeWell - A Smart Portal for Senior Citizen Support
+            </h2>
             <a href="https://github.com/Rakshitgupta9/AgeWell-A-Smart-Portal-for-Senior-Citizen-Support" target="_blank"
                 rel="noopener" class="download-btn"
                 style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on GitHub <i
@@ -59,7 +60,7 @@
                 style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem; margin-left: 12px;">Live View <i
                     class="fas fa-external-link-alt"></i></a>
 
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Overview</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Overview</h3>
             <p style="font-size:1.18rem; line-height:1.7;">AgeWell is a comprehensive web-based platform designed to
                 empower
                 elderly individuals by providing an intuitive interface for managing their social, financial, and
@@ -69,10 +70,10 @@
                 monitoring and quick response during emergencies.</p>
 
             <div style="margin-top: 30px;">
-                <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Key Features</h3>
+                <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">✨ Key Features</h3>
                 <div class="feature-cards">
                     <div class="feature-card">
-                        <h4>Social Events & Community Interaction</h4>
+                        <h4>👥 Social Events & Community Interaction</h4>
                         <ul>
                             <li>Browse and join local community events</li>
                             <li>Connect with peers through interest-based groups</li>
@@ -80,7 +81,7 @@
                         </ul>
                     </div>
                     <div class="feature-card">
-                        <h4>Learning Corner (Tech Literacy Hub)</h4>
+                        <h4>📚 Learning Corner (Tech Literacy Hub)</h4>
                         <ul>
                             <li>Easy-to-follow tutorials for common digital tools</li>
                             <li>Interactive guides for using smartphones and tablets</li>
@@ -88,7 +89,7 @@
                         </ul>
                     </div>
                     <div class="feature-card">
-                        <h4>Personal Finance Manager</h4>
+                        <h4>💰 Personal Finance Manager</h4>
                         <ul>
                             <li>Track daily expenses and income</li>
                             <li>Set up bill payment reminders</li>
@@ -97,7 +98,7 @@
                         </ul>
                     </div>
                     <div class="feature-card">
-                        <h4>Emergency Support System</h4>
+                        <h4>🚨 Emergency Support System</h4>
                         <ul>
                             <li>One-click emergency alert button</li>
                             <li>Real-time location sharing with family</li>
