--- a/projects/project1.html
+++ b/projects/project1.html
@@ -49,12 +49,13 @@
     </nav>
     <main class="container">
         <section class="project-detail">
-            <h2 style="font-size:2.5rem; margin-bottom:18px;">Smart IoT-Based Parking Management System Using ESP32-CAM
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">🚗 Smart IoT-Based Parking Management System Using
+                ESP32-CAM
                 and Custom ANPR Model</h2>
             <a href="https://github.com/Rakshitgupta9/Smart-Parking-Management" target="_blank" rel="noopener"
                 class="download-btn" style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on
                 GitHub <i class="fab fa-github"></i></a>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Project Overview</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Project Overview</h3>
             <p style="font-size:1.18rem; line-height:1.7;">The Smart Parking Management project is an IoT-based solution
                 designed to automate vehicle parking processes using the ESP32-CAM module and Automatic Number Plate
                 Recognition (ANPR). The system captures vehicle images, sends them to a local server for number plate
@@ -65,10 +66,10 @@
             <p style="font-size:1.18rem; line-height:1.7;">This repository contains all the code, documentation, and
                 resources needed to replicate the project, including ESP32 firmware, server-side code, ANPR model,
                 testing scripts, and circuit diagrams.</p>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Key Components</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">🔧 Key Components</h3>
             <div class="feature-cards">
                 <div class="feature-card">
-                    <h4>ESP32-CAM</h4>
+                    <h4>📷 ESP32-CAM</h4>
                     <ul>
                         <li>Microcontroller with OV2640 camera module</li>
                         <li>Captures vehicle images</li>
@@ -76,7 +77,7 @@
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>IR Sensors</h4>
+                    <h4>🔍 IR Sensors</h4>
                     <ul>
                         <li>Two infrared sensors for entry (GPIO 16) and exit (GPIO 15)</li>
                         <li>Detect vehicle movement</li>
@@ -84,7 +85,7 @@
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Servo Motor</h4>
+                    <h4>⚙️ Servo Motor</h4>
                     <ul>
                         <li>Controls gate mechanism</li>
                         <li>Toggles between 0Â° and 90Â° based on entry IR sensor</li>
@@ -92,14 +93,14 @@
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Flashlight</h4>
+                    <h4>💡 Flashlight</h4>
                     <ul>
                         <li>LED on GPIO 4</li>
                         <li>Illuminates scene during image capture</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Local Server</h4>
+                    <h4>🖥️ Local Server</h4>
                     <ul>
                         <li>Flask-based server (192.168.29.56:5000/upload)</li>
                         <li>Processes images and performs ANPR</li>
@@ -107,7 +108,7 @@
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>ANPR Model</h4>
+                    <h4>🤖 ANPR Model</h4>
                     <ul>
                         <li>Jupyter Notebook (anpr.ipynb)</li>
                         <li>Implements Automatic Number Plate Recognition</li>
@@ -115,14 +116,14 @@
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Web Interface</h4>
+                    <h4>🌐 Web Interface</h4>
                     <ul>
                         <li>HTML interface served by ESP32-CAM</li>
                         <li>Displays real-time system status, time, last event, and captured images</li>
                     </ul>
                 </div>
             </div>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Components</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">⚡ Components</h3>
             <div class="tech-slider">
                 <div class="tech-track">
                     <div class="tech-card">ESP32-CAM</div>
@@ -133,7 +134,7 @@
                     <div class="tech-card">Jumper wires</div>
                 </div>
             </div>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Tech Stack</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Tech Stack</h3>
             <div class="tech-slider">
                 <div class="tech-track">
                     <div class="tech-card">Python</div>
