--- a/projects/project2.html
+++ b/projects/project2.html
@@ -49,57 +49,57 @@
     </nav>
     <main class="container">
         <section class="project-detail">
-            <h2 style="font-size:2.5rem; margin-bottom:18px;">Bus Route Management System Using A* Algorithm</h2>
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">🚌 Bus Route Management System Using A* Algorithm</h2>
             <a href="https://github.com/Rakshitgupta9/Bus-Route-Management-using-A-star-Algo" target="_blank"
                 rel="noopener" class="download-btn"
                 style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on GitHub <i
                     class="fab fa-github"></i></a>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Project Overview</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Project Overview</h3>
             <p style="font-size:1.18rem; line-height:1.7;">Bus Route Management System Using A* Algorithm is a web
                 application designed to
                 simplify the process of booking bus seats, managing routes, and accessing user profiles. It integrates a
                 dynamic map for selecting start and end locations, with automatic route calculation and pricing based on
                 distance.</p>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Features</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">✨ Features</h3>
             <div class="feature-cards">
                 <div class="feature-card">
-                    <h4>Login/Register</h4>
+                    <h4>🔐 Login/Register</h4>
                     <ul>
                         <li>Secure user authentication with MongoDB</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Interactive Bus Booking</h4>
+                    <h4>🎫 Interactive Bus Booking</h4>
                     <ul>
                         <li>Book seats with route selection on an interactive map or search</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Dynamic Pricing</h4>
+                    <h4>💰 Dynamic Pricing</h4>
                     <ul>
                         <li>Pricing calculated based on distance</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>My Bookings</h4>
+                    <h4>📋 My Bookings</h4>
                     <ul>
                         <li>View and cancel bookings</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Profile Management</h4>
+                    <h4>👤 Profile Management</h4>
                     <ul>
                         <li>Access personal details and manage sessions</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Map Integration</h4>
+                    <h4>🗺️ Map Integration</h4>
                     <ul>
                         <li>Search and select routes using OpenStreetMap and Leaflet</li>
                     </ul>
                 </div>
             </div>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Tech Stack</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Tech Stack</h3>
             <div class="tech-slider">
                 <div class="tech-track">
                     <div class="tech-card">Python (Flask)</div>
