--- a/projects/project3.html
+++ b/projects/project3.html
@@ -49,42 +49,42 @@
     </nav>
     <main class="container">
         <section class="project-detail" style="max-width:900px; margin:0 auto;">
-            <h2 style="font-size:2.5rem; margin-bottom:18px;">Health Companion</h2>
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">🏥 Health Companion</h2>
             <a href="https://github.com/Rakshitgupta9/Health-Companion" target="_blank" rel="noopener"
                 class="download-btn" style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on
                 GitHub <i class="fab fa-github"></i></a>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Introduction</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Introduction</h3>
             <p style="font-size:1.18rem; line-height:1.7;">Health Companion is a web application designed to help users
                 monitor and predict their risk for certain health conditions using machine learning algorithms. The
                 application is user-friendly and provides detailed information and insights based on user input.</p>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Features</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">✨ Features</h3>
             <div class="feature-cards">
                 <div class="feature-card">
-                    <h4>Disease Prediction</h4>
+                    <h4>🔮 Disease Prediction</h4>
                     <ul>
                         <li>Predicts the risk of stroke, cardiovascular diseases, and diabetes.</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>BMI Calculator</h4>
+                    <h4>⚖️ BMI Calculator</h4>
                     <ul>
                         <li>Calculates Body Mass Index (BMI) based on height and weight.</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Calorie Calculator</h4>
+                    <h4>🔥 Calorie Calculator</h4>
                     <ul>
                         <li>Estimates daily calorie needs based on various factors.</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>User Authentication</h4>
+                    <h4>🔐 User Authentication</h4>
                     <ul>
                         <li>Secure login and registration for personalized experience.</li>
                     </ul>
                 </div>
             </div>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Technologies Used</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Technologies Used</h3>
             <div class="tech-slider">
                 <div class="tech-track">
                     <div class="tech-card">HTML</div>
