--- a/projects/project4.html
+++ b/projects/project4.html
@@ -49,60 +49,60 @@
     </nav>
     <main class="container">
         <section class="project-detail">
-            <h2 style="font-size:2.5rem; margin-bottom:18px;">Test Platform Using Linux Shell Scripting</h2>
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">💻 Test Platform Using Linux Shell Scripting</h2>
             <a href="https://github.com/Rakshitgupta9/Test-Platform-Using-Linux-Shell-scripting" target="_blank"
                 rel="noopener" class="download-btn"
                 style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on GitHub <i
                     class="fab fa-github"></i></a>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Project Overview</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Project Overview</h3>
             <p style="font-size:1.18rem; line-height:1.7;">This project is a login-based Online Test Platform created on
                 Linux using shell scripting. It leverages pattern matching commands and file handling concepts to
                 provide a secure, interactive, and automated test-taking experience directly in the terminal.</p>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Features</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">✨ Features</h3>
             <div class="feature-cards">
                 <div class="feature-card">
-                    <h4>Login/Sign-Up System</h4>
+                    <h4>🔐 Login/Sign-Up System</h4>
                     <ul>
                         <li>Secure user authentication with username and password</li>
                         <li>Sign-up and sign-in options for new and returning users</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Timed Test Sessions</h4>
+                    <h4>⏰ Timed Test Sessions</h4>
                     <ul>
                         <li>Each question is timed (30 seconds per question)</li>
                         <li>Automatic timeout and progress to next question</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Randomized Questions</h4>
+                    <h4>🎲 Randomized Questions</h4>
                     <ul>
                         <li>Random selection of 10 questions from a question bank</li>
                         <li>Ensures a unique test experience for each attempt</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Result & Review</h4>
+                    <h4>📊 Result & Review</h4>
                     <ul>
                         <li>Displays total score and correct answers after test completion</li>
                         <li>Option to retake the test, view answers, or go to profile</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Profile Management</h4>
+                    <h4>👤 Profile Management</h4>
                     <ul>
                         <li>View and manage user profile details</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Shell Scripting Concepts</h4>
+                    <h4>🐚 Shell Scripting Concepts</h4>
                     <ul>
                         <li>Pattern matching, file handling, and process management</li>
                         <li>Use of arrays, functions, and control structures in bash</li>
                     </ul>
                 </div>
             </div>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Tech Stack</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Tech Stack</h3>
             <div class="tech-slider">
                 <div class="tech-track">
                     <div class="tech-card">Linux</div>
