--- a/projects/project5.html
+++ b/projects/project5.html
@@ -49,7 +49,7 @@
     </nav>
     <main class="container">
         <section class="project-detail">
-            <h2 style="font-size:2.5rem; margin-bottom:18px;">Zinnger - Restaurant Landing Page</h2>
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">🍽️ Zinnger - Restaurant Landing Page</h2>
             <a href="https://github.com/Rakshitgupta9/Zingger-Restaurant_Web_page" target="_blank" rel="noopener"
                 class="download-btn" style="margin-bottom: 18px; display: inline-block; font-size: 1.1rem;">View on
                 GitHub <i class="fab fa-github"></i></a>
@@ -57,15 +57,15 @@
                 class="download-btn"
                 style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem; margin-left: 12px;">Live View <i
                     class="fas fa-external-link-alt"></i></a>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Overview</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Overview</h3>
             <p style="font-size:1.18rem; line-height:1.7;">Welcome to Zinnger - a responsive and dynamic restaurant
                 landing page designed and developed to enhance the digital presence of our restaurant. This project
                 encompasses a range of features, from an interactive menu with online ordering to a seamless table
                 booking system. Dive into the world of Zinnger and explore what we have to offer!</p>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Features</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">✨ Features</h3>
             <div class="feature-cards">
                 <div class="feature-card">
-                    <h4>Dynamic Menu</h4>
+                    <h4>🍽️ Dynamic Menu</h4>
                     <ul>
                         <li>Browse through our diverse range of dishes and beverages.</li>
                         <li>Customize orders and view a running total.</li>
@@ -73,7 +73,7 @@
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Table Booking</h4>
+                    <h4>📅 Table Booking</h4>
                     <ul>
                         <li>Effortlessly book a table by providing necessary details.</li>
                         <li>Agree to terms and conditions for a transparent booking process.</li>
@@ -81,28 +81,28 @@
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Admin Portal</h4>
+                    <h4>👨‍💼 Admin Portal</h4>
                     <ul>
                         <li>Secure login for authorized personnel.</li>
                         <li>Access details about orders and table bookings for efficient management.</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>Gallery</h4>
+                    <h4>📸 Gallery</h4>
                     <ul>
                         <li>Visual showcase of our restaurant's ambiance and culinary creations.</li>
                         <li>Engaging images and videos to provide a glimpse of the Zinnger experience.</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>About Us</h4>
+                    <h4>ℹ️ About Us</h4>
                     <ul>
                         <li>Explore the restaurant's history, philosophy, and team.</li>
                         <li>Share your feedback through our user-friendly feedback section.</li>
                     </ul>
                 </div>
             </div>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">Technologies Used</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Technologies Used</h3>
             <div class="tech-slider">
                 <div class="tech-track">
                     <div class="tech-card">HTML5</div>
