--- a/projects/project6.html
+++ b/projects/project6.html
@@ -48,127 +48,52 @@
         </div>
     </nav>
     <main class="container">
-        <section class="project-detail">
-            <h2 style="font-size:2.5rem; margin-bottom:18px;">👴 AgeWell - A Smart Portal for Senior Citizen Support
-            </h2>
-            <a href="https://github.com/Rakshitgupta9/AgeWell-Smart-Portal-for-Senior-Citizen" target="_blank"
-                rel="noopener" class="download-btn"
-                style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on GitHub <i
-                    class="fab fa-github"></i></a>
-
-            <a href="https://agewell-5jt8.onrender.com/" target="_blank" rel="noopener" class="download-btn"
-                style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem; margin-left: 12px;">Live View <i
-                    class="fas fa-external-link-alt"></i></a>
-
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Overview</h3>
-            <p style="font-size:1.18rem; line-height:1.7;">AgeWell is a comprehensive web-based platform designed to
-                empower
-                elderly individuals by providing an intuitive interface for managing their social, financial, and
-                health-related
-                needs. The platform facilitates secure connections between seniors and their family members, enabling
-                real-time
-                monitoring and quick response during emergencies.</p>
-
-            <div style="margin-top: 30px;">
-                <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">✨ Key Features</h3>
-                <div class="feature-cards">
-                    <div class="feature-card">
-                        <h4>👥 Social Events & Community Interaction</h4>
-                        <ul>
-                            <li>Browse and join local community events</li>
-                            <li>Connect with peers through interest-based groups</li>
-                            <li>Share experiences and stories in a safe environment</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>📚 Learning Corner (Tech Literacy Hub)</h4>
-                        <ul>
-                            <li>Easy-to-follow tutorials for common digital tools</li>
-                            <li>Interactive guides for using smartphones and tablets</li>
-                            <li>Regular workshops on digital safety and privacy</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>💰 Personal Finance Manager</h4>
-                        <ul>
-                            <li>Track daily expenses and income</li>
-                            <li>Set up bill payment reminders</li>
-                            <li>Monitor savings and investments</li>
-                            <li>Generate monthly financial reports</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>🚨 Emergency Support System</h4>
-                        <ul>
-                            <li>One-click emergency alert button</li>
-                            <li>Real-time location sharing with family</li>
-                            <li>Direct connection to emergency services</li>
-                            <li>Automated notifications to registered contacts</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>Health & Wellness</h4>
-                        <ul>
-                            <li>Daily health tips and wellness reminders</li>
-                            <li>Medication tracking and reminders</li>
-                            <li>Exercise and activity suggestions</li>
-                            <li>Health metrics monitoring</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>Remote Monitoring (Family Members)</h4>
-                        <ul>
-                            <li>Real-time activity tracking</li>
-                            <li>Health status updates</li>
-                            <li>Emergency alerts and notifications</li>
-                            <li>Location tracking (with consent)</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>Communication Tools (Family Members)</h4>
-                        <ul>
-                            <li>Secure messaging system</li>
-                            <li>Video call integration</li>
-                            <li>Shared calendar for appointments</li>
-                            <li>Family group chat</li>
-                        </ul>
-                    </div>
+        <section class="project-detail" style="max-width:900px; margin:0 auto;">
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">🏥 Health Companion</h2>
+            <a href="https://github.com/Rakshitgupta9/Health-Companion" target="_blank" rel="noopener"
+                class="download-btn" style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on
+                GitHub <i class="fab fa-github"></i></a>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Introduction</h3>
+            <p style="font-size:1.18rem; line-height:1.7;">Health Companion is a web application designed to help users
+                monitor and predict their risk for certain health conditions using machine learning algorithms. The
+                application is user-friendly and provides detailed information and insights based on user input.</p>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">✨ Features</h3>
+            <div class="feature-cards">
+                <div class="feature-card">
+                    <h4>🔮 Disease Prediction</h4>
+                    <ul>
+                        <li>Predicts the risk of stroke, cardiovascular diseases, and diabetes.</li>
+                    </ul>
                 </div>
-                <h3 style="color:#7ec4ff; font-size:1.5rem; margin-top:30px;">Tech Stack</h3>
-                <h4 style="color:#7ec4ff; margin-bottom:6px;">Frontend</h4>
-                <div class="tech-slider">
-                    <div class="tech-track">
-                        <div class="tech-card">HTML5</div>
-                        <div class="tech-card">CSS3</div>
-                        <div class="tech-card">Bootstrap 5</div>
-                        <div class="tech-card">JavaScript (ES6+)</div>
-                        <div class="tech-card">Jinja2 Templates</div>
-                        <div class="tech-card">Chart.js</div>
-                        <div class="tech-card">FullCalendar.js</div>
-                        <div class="tech-card">Google Maps API</div>
-                    </div>
+                <div class="feature-card">
+                    <h4>⚖️ BMI Calculator</h4>
+                    <ul>
+                        <li>Calculates Body Mass Index (BMI) based on height and weight.</li>
+                    </ul>
                 </div>
-                <h4 style="color:#7ec4ff; margin-bottom:6px; margin-top:18px;">Backend</h4>
-                <div class="tech-slider">
-                    <div class="tech-track">
-                        <div class="tech-card">Flask 3.0.2 (Python)</div>
-                        <div class="tech-card">MongoDB 4.6.1</div>
-                        <div class="tech-card">Flask-Login</div>
-                        <div class="tech-card">Flask-Mail</div>
-                        <div class="tech-card">Twilio</div>
-                        <div class="tech-card">APScheduler</div>
-                    </div>
+                <div class="feature-card">
+                    <h4>🔥 Calorie Calculator</h4>
+                    <ul>
+                        <li>Estimates daily calorie needs based on various factors.</li>
+                    </ul>
                 </div>
-                <h4 style="color:#7ec4ff; margin-bottom:6px; margin-top:18px;">Security</h4>
-                <div class="tech-slider">
-                    <div class="tech-track">
-                        <div class="tech-card">Bcrypt</div>
-                        <div class="tech-card">Flask-Login</div>
-                        <div class="tech-card">Environment Variables</div>
-                        <div class="tech-card">CSRF Protection</div>
-                        <div class="tech-card">Input Validation</div>
-                        <div class="tech-card">Sanitization</div>
-                    </div>
+                <div class="feature-card">
+                    <h4>🔐 User Authentication</h4>
+                    <ul>
+                        <li>Secure login and registration for personalized experience.</li>
+                    </ul>
+                </div>
+            </div>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Technologies Used</h3>
+            <div class="tech-slider">
+                <div class="tech-track">
+                    <div class="tech-card">HTML</div>
+                    <div class="tech-card">CSS</div>
+                    <div class="tech-card">JavaScript</div>
+                    <div class="tech-card">Python</div>
+                    <div class="tech-card">Flask</div>
+                    <div class="tech-card">MySQL</div>
+                    <div class="tech-card">Machine Learning Models</div>
                 </div>
             </div>
         </section>
