--- a/pages/projects.html
+++ b/pages/projects.html
@@ -49,7 +49,7 @@
     </nav>
     <main class="container">
         <section class="projects" id="projects">
-            <h2>My Projects</h2>
+            <h2>Main Projects</h2>
             <div class="projects-grid">
                 <a class="project-card" href="../projects/project9.html">
                     <h3>👴 AgeWell - A Smart Portal for Senior Citizen Support</h3>
