--- a/pages/projects.html
+++ b/pages/projects.html
@@ -122,7 +122,7 @@
 
     <!-- Floating Action Button -->
     <div class="fab">
-        <a href="#top" class="fab-button">
+        <a href="#projects" class="fab-button">
             <i class="fas fa-arrow-up"></i>
         </a>
     </div>
