--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <h2>Education</h2>
             <div class="feature-cards">
                 <div class="feature-card">
-                    <h4>Bachelor of Technology (BTech) - CSE</h4>
+                    <h4>Bachelor of Engineering (BE) - CSE</h4>
                     <div class="institution-info">Model Institute of Engineering and Technology, Jammu <span
                             class="duration">(June 2025)</span></div>
                     <ul>
